# icspb

./: .gitignore  CMakeLists.txt  README.md
lib/: nanopbProtoUpdate.c
lib/include/nanopb/: nanopbProtoUpdate.h
protos/commands/generic/v1/: client_id.proto
protos/commands/network/v1/: mutex.options  mutex.proto  networks.proto
protos/common/v1/: proto_header.options  proto_header.proto
protos/settings/common/v1/: types.options  types.proto
protos/settings/manufacturing/v1/: mfg_config.options  mfg_config.proto
scripts/: CMakeLists.txt  default_config.json  nanopb_generator.cpp
